# programming_class

./: .gitignore
1/: HelloWorld.java  script.sh
2/: tests.txt
3/: MaxSubseqSum1.java
4/: ArrayString.java  OffDiag.java
5/: ArrayCerchi.java  OrdinaTesto.java
6/: Test.java
7/: CopiaListaIntOrdinati.java  copia.txt  interi.txt  ordinato.txt
7.5/: ContoBancario.java  movimenti.txt
8/: Impegno.java  Test.java
8/webshop/: Carrello.java
9/: Mirror.java
9/Pila/: MirrorDinamico.java  PilaDinamica.java  PilaPienaException.java  PilaStatica.java
Derps/: ca.crt
Esame/: Evento.java
Esame Lab/: Esame.java  Esame30.java  Menu.java  Registro.java  Start.txt
Esame Lab/Aula/: Esercizio2.java  Passeggero.java  Volo.java
Esame Lab/Aula 2/: Esercizio1.java  Passeggero.java  PasseggeroStar.java  Volo.java
Esame Lab/Palindroma/: Palindroma.java  Start.txt
Esame Lab/Radice/: Radice.java
Esame Lab/Tris/: Tris.java
Esercizi/: Conto  Conto.java  Conto2.java  Prova.c
Old sort/Lezione 3/: Turno.java
Old sort/Lezione 4/: ConfrontoSommaArray.java  ProdInternoArray.java
Old sort/Lezione 5/: Tabella.java
algorithms/1/: es_1_sizeof-standard-types.c  es_2_guess-the-number.c  es_3_char-check.c  es_3_print-figures.c  es_4_figures.c
algorithms/10/: es_1.c
algorithms/2/: es_1_1_reverse-print.c  es_1_2_double-number-check.c  es_1_3_log-from-base-ten-to-base-b.c  es_1_4_log-from-base-b-to-base-ten.c  es_1_5_students-exams-media.c  es_1_6_magic-square.c  es_1_7_palindroma.c  es_1_9_contacts.c  es_2_1_letter-conter.c  es_2_2_anagramma.c  es_2_3_random-walk.c
algorithms/3/: es_0_1_square.c  es_1_1_potenza.c  es_1_2_primo.c  (+9 more)
computer_networks/: README.md
computer_security/: Makefile
databases/: 20141009.txt  6-1.html  6-2.html  6-3.html  6-4.php  6-6.html  esercizio.txt  lesson_1  lesson_2  lesson_3  lesson_5  lesson_6  plpgsql_schema.sql  software_used
distributed_systems/: .gitignore  build.gradle  settings.gradle
programming/: .gitignore
programming_languages/: .gitignore  Makefile.am  configure.ac
programming_languages/erlang/normal/: Makefile.am
programming_languages/erlang/normal/exercise_1/: Makefile.am  exercise_1.erl
programming_languages/erlang/normal/exercise_2/: Makefile.am  exercise_2.erl
programming_languages/exam/erlang/2015-01-29/: combinator.erl  generator.erl
programming_languages/exam/erlang/2015-02-26/: ring.erl
programming_languages/exam/erlang/2016-01-27/: client.erl  tempsys.erl
programming_languages/exam/ocaml/2015-01-29/: Natural.ml  NaturalI.mli  main.ml
programming_languages/exam/ocaml/2015-02-06/: IntervalI.mli  main
programming_languages/exam/ocaml/2015-02-26/: Comparable.mli  Interval.ml  main.ml
programming_languages/exam/ocaml/2016-01-27/: Primality.ml
programming_languages/exam/ocaml/2016-02-18/: Reduction.ml  main.ml
programming_languages/exam/scala/: Parser.scala
programming_languages/exam/scala/2015-01-29/: Parser.scala  books.csv  languages.csv
programming_languages/exam/scala/2015-02-26/: Desk.scala  test.desk
programming_languages/exam/scala/2016-01-27/: LogLang.scala
programming_languages/exam/scala/2016-02-18/: StepByStep.scala
programming_languages/m4/: scala.m4
programming_languages/more_exams/ocaml/2012-02-29/: main.ml  path.ml
programming_languages/more_exams/ocaml/2013-04-23/: goldbach.ml  main.ml
programming_languages/more_exams/ocaml/2015-01-29/: Natural.ml  NaturalI.mli  main.ml
programming_languages/more_exams/ocaml/2016-01-27/: main.ml  primality.ml
programming_languages/more_exams/ocaml/2016-02-18/: main.ml  reduction.ml
programming_languages/more_exams/ocaml/2016-07-08/: cqsort.ml  main.ml  qsort.ml
programming_languages/more_exams/scala/2012-02-29/: WtF.scala  ops.wtf
programming_languages/more_exams/scala/2013-04-23/: StepByStep.scala  expressions.txt
programming_languages/more_exams/scala/2015-01-29/: CSV.scala
programming_languages/more_exams/scala/2016-01-27/: LogLang.scala  tasks.loglang
programming_languages/more_exams/scala/2016-06-15/: ArnoldC.scala  print-10.arnoldc
programming_languages/ocaml/: Makefile.am
programming_languages/ocaml/normal/: Makefile.am  es_01.ml  es_03.ml
programming_languages/ocaml/normal/exercise_1/: Makefile.am  exercise_1.ml
programming_languages/ocaml/normal/exercise_2/: Makefile.am  exercise_2.ml
programming_languages/ocaml/normal/exercise_3/: Makefile.am  exercise_3.ml
programming_languages/old/: test.erl
programming_languages/old/ocaml/normal/: es_02.ml  es_03.ml
programming_languages/scala/: hi.scala  hi2.scala
(+213 files in other folders)
